make bg scale larger to make sure it covers screen

--- a/src/sass/components/_mobile-nav.scss
+++ b/src/sass/components/_mobile-nav.scss
@@ -94,7 +94,7 @@
 
   //FUNCTIONALITY
   &__checkbox:checked ~ &__background {
-    transform: scale(80);
+    transform: scale(100);
     position: fixed;
   }
 
